--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
+    "react-ga": "^3.3.1",
     "react-google-charts": "^4.0.0",
     "react-helmet-async": "^1.2.2",
     "react-icons": "^4.4.0",
